--- a/views/doctors.ejs
+++ b/views/doctors.ejs
@@ -68,7 +68,7 @@
 					</td>
 					
 					<td>
-						<i class="bi bi-trash3-fill" value="<%= doctor._id%>"></i>
+						<i class="bi bi-trash3-fill del-doctor" value="<%= doctor._id%>"></i>
 					</td>
 				</tr>
 			<%})%>
