--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
 		</div>
 	</div>
 	<div class="col-12">
-		<div class="card" name="wishes">
+		<div class="card" name="wishlist">
 		  <div class="card-body shadow">
 		    <h5 class="card-title">Wünsche</h5>
 		    <h6 class="card-subtitle mb-2 text-muted">Wunschlisten erstellen und verwalten</h6>
