--- a/views/plans.ejs
+++ b/views/plans.ejs
@@ -1,3 +1,6 @@
+// This page shows a list of all plans.
+// This page allows to create a new plan.
+
 <%- include("header") -%>
 
 <h1>Alle Pläne</h1>
