finish wish-creation with db-integration and begin plancreation

--- a/views/wish.ejs
+++ b/views/wish.ejs
@@ -28,6 +28,6 @@
 		<%})%>
 	</tbody>
 </table>
-<button class="btn btn-success btn-save-wish">Speichern</button>
+<button class="btn btn-success btn-save-wish" value="<%= wishList._id %>">Speichern</button>
 
 <%- include("footer") -%>
