--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,11 @@ h1 {
 	margin: 2%;
 }
 
+a, a:hover, a:focus, a:active {
+  text-decoration: none !important;
+  color:  inherit;
+}
+
 /*************************************** Header / Footer / global used styles ***************************************/
 
 .back-button{
