finish the post of plan-data back to backend

--- a/views/plan.ejs
+++ b/views/plan.ejs
@@ -1,5 +1,5 @@
 <!-- This page shows a single Plan for Editing and starting the auto-fill
-    ejs variables: plan, doctors, wishLists, wishlist
+    ejs variables: plan, doctors, wishLists, available
  -->
 <%- include("header") -%>
 <%const week = ["Sonntag", "Montag", "Dienstag", "Mittwoch", "Donnerstag", "Freitag", "Samstag"]%>
@@ -25,21 +25,48 @@
                 <td><%= week[day.date.getDay()]%></td>
                 <td><a tabindex="0" class="popover-toggle" data-toggle="popover" data-placement="bottom" data-title="" data-container="body" data-duty="emergencyDepartment-<%= day.date.getDate()%>"><span data-doctorId=""></span><span data-doctorId=""></span></a></td>
                 <td><a tabindex="0" class="popover-toggle" data-toggle="popover" data-placement="bottom" data-title="" data-container="body" data-duty="house-<%= day.date.getDate()%>"><span data-doctorId=""></span><span data-doctorId=""></span></a></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>
+                    <select class="form-select" id="imc-<%= day.date.getDate()%>">
+                        <option value="0"></option>
+                        <%for(doctor of doctors){%>
+                            <%if(doctor.imc){%>
+                                <option value="<%= doctor._id%>"><%=doctor.name%></option>
+                            <%}%>
+                        <%}%>
+                    </select>
+                </td>
+                <td>
+                    <select class="form-select" id="emergencyDoctor-<%= day.date.getDate()%>">
+                        <option value="0"></option>
+                        <%for(doctor of doctors){%>
+                            <%if(doctor.emergencyDoctor){%>
+                                <option value="<%= doctor._id%>"><%=doctor.name%></option>
+                            <%}%>
+                        <%}%>
+                    </select>
+                </td>
+                <td>
+                    <select class="form-select" id="rescueHelicopter-<%= day.date.getDate()%>">
+                        <option value="0"></option>
+                        <%for(doctor of doctors){%>
+                            <%if(doctor.rescueHelicopter){%>
+                                <option value="<%= doctor._id%>"><%=doctor.name%></option>
+                            <%}%>
+                        <%}%>
+                    </select>
+                </td>
             </tr>
 
             <%if(available){%>
             <div id="popover-content-emergencyDepartment-<%= day.date.getDate()%>" class="hide">
                 <p>select two for shared duty</p>
-                <select id="emergencyDepartment-1-<%= day.date.getDate()%>" class="form-select new-plan-form-select">
+                <select id="emergencyDepartment-1-<%= day.date.getDate()%>" class="form-select new-plan-form-select emDOrHouse">
                     <option value="0" selected> </option>
                     <%available[String(day.date.getDate())].emergencyDepartment.forEach(doctor => {%>  
                         <option value="<%= doctor[0]%>"><%= doctor[1]%></option>
                     <%})%>
                 </select>
-                <select id="emergencyDepartment-2-<%= day.date.getDate()%>" class="form-select new-plan-form-select">
+                <select id="emergencyDepartment-2-<%= day.date.getDate()%>" class="form-select new-plan-form-select emDOrHouse">
                     <option value="0"> </option>
                     <%available[String(day.date.getDate())].emergencyDepartment.forEach(doctor => {%>  
                         <option value="<%= doctor[0]%>"><%= doctor[1]%></option>
@@ -52,13 +79,13 @@
 
             <div id="popover-content-house-<%= day.date.getDate()%>" class="hide">
                 <p>select two for shared duty</p>
-                <select id="house-1-<%= day.date.getDate()%>" class="form-select new-plan-form-select">
+                <select id="house-1-<%= day.date.getDate()%>" class="form-select new-plan-form-select emDOrHouse">
                     <option value="0" selected> </option>
                     <%available[String(day.date.getDate())].house.forEach(doctor => {%>  
                         <option value="<%= doctor[0]%>"><%= doctor[1]%></option>
                     <%})%>
                 </select>
-                <select id="house-2-<%= day.date.getDate()%>" class="form-select new-plan-form-select">
+                <select id="house-2-<%= day.date.getDate()%>" class="form-select new-plan-form-select emDOrHouse">
                     <option value="0"> </option>
                     <%available[String(day.date.getDate())].house.forEach(doctor => {%>  
                         <option value="<%= doctor[0]%>"><%= doctor[1]%></option>
@@ -70,10 +97,7 @@
             </div>
             <%}%>
         <%})%>
-
     </tbody>
-
-
 </table>
 
 
