--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-/* Global TAGS */
+/*************************************** Global TAGS ***************************************/
 
 html{
 	height: 100%;
@@ -18,7 +18,12 @@ h1 {
 	margin: 2%;
 }
 
-/* Header / Footer / global used styles */
+a, a:hover, a:focus, a:active {
+  text-decoration: none !important;
+  color:  inherit;
+}
+
+/*************************************** Header / Footer / global used styles ***************************************/
 
 .back-button{
 	font-size: 3rem;
@@ -34,7 +39,7 @@ h1 {
 	color: #5cb85c;
 }
 
-/* Global styling-elements */
+/*************************************** Global styling-elements ***************************************/
 
 }
 .dot { /* Separator */
@@ -53,8 +58,9 @@ h1 {
 
 .bi-trash3-fill:hover{
 	color:  red;
+}
 
-/* Index Page */
+/*************************************** Index Page ***************************************/
 
 .card{
 	margin: 10px auto;
@@ -77,14 +83,14 @@ h1 {
 	}
 }
 
-/* Doctors Page */
+/*************************************** Doctors Page ***************************************/
 
 form.doctors{
 	margin-right: 10%;
 	margin-left: 10%;
 }
 
-/* Plans Page */	
+/*************************************** Plans Page ***************************************/	
 
 .new-plan-form-select{
 	display: inline-block;
@@ -115,7 +121,7 @@ form.doctors{
 	display: none;
 }
 
-/* Wishlist Page */
+/*************************************** Wishlist Page ***************************************/
 	
 .wishlist-search{
 	width: 30%;
@@ -139,7 +145,7 @@ form.doctors{
 	display: none;
 }
 
-/* Wish Page */
+/*************************************** Wish Page ***************************************/
 	
 .wish-table{
 	width:  60%;
@@ -190,3 +196,50 @@ div.input-group{
 .btn-save-wish{
 	margin-top: 20px;
 }
+
+.unselectable{
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
+/*************************************** Plan Page ***************************************/
+
+.plan-wish-select{
+	display: inline-block;
+	text-align: center;
+	width:  200px;
+	margin-top: 10px;
+}
+
+.plan-table{
+	width:  70%;
+	height: 100%;
+	margin:  auto;
+	margin-top: 20px;
+	cursor: pointer;
+}
+
+/*.popover {max-width:280px;}*/
+
+.hide{display: none;}
+
+.popover-toggle{
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+.my-form-control{
+	width: 200px;
+}
+
+
+
+
+
+
